# petitinit

./: CMakeLists.txt  README.md  petitinit.cpp  petitinit.hpp
